--- a/package.json
+++ b/package.json
@@ -27,5 +27,11 @@
     "prettier-plugin-solidity": "^1.0.0-alpha.60",
     "solhint": "^3.3.2",
     "solhint-plugin-prettier": "^0.0.5"
+  },
+  "dependencies": {
+    "@chainlink/contracts": "0.0.11",
+    "@openzeppelin/contracts": "^3.2.0",
+    "chai": "^4.2.0",
+    "ethereum-waffle": "^3.2.0"
   }
 }
