improve oracle aggregator

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@chainlink/contracts": "0.0.11",
+    "@gelatonetwork/core": "^1.6.0",
     "@openzeppelin/contracts": "^3.2.0",
     "chai": "^4.2.0",
     "ethereum-waffle": "^3.2.0"
