--- a/package.json
+++ b/package.json
@@ -13,24 +13,28 @@
     "lint:sol": "solhint 'contracts/**/*.sol'",
     "lint:fix": "eslint --cache --fix . && solhint --fix contracts/**/*.sol",
     "test": "npx hardhat test",
-    "debug": "DEBUG=true yarn compile && npx hardhat test"
+    "test:gas": "REPORT_GAS=1 npx hardhat test",
+    "debug": "DEBUG=true yarn compile && npx hardhat test",
+    "coverage": "npx hardhat coverage --temp artifacts"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
     "dotenv": "^8.2.0",
+    "eslint": "7.14.0",
+    "eslint-config-prettier": "6.15.0",
     "ethers": "^5.0.19",
     "hardhat": "^2.0.3",
     "hardhat-deploy": "^0.7.0-beta.44",
     "hardhat-deploy-ethers": "^0.3.0-beta.7",
+    "hardhat-gas-reporter": "^1.0.4",
+    "husky": ">=4",
+    "lint-staged": "10.5.2",
     "prettier": "^2.1.2",
     "prettier-plugin-solidity": "^1.0.0-alpha.60",
     "solhint": "^3.3.2",
     "solhint-plugin-prettier": "^0.0.5",
-    "husky": ">=4",
-    "eslint": "7.14.0",
-    "eslint-config-prettier": "6.15.0",
-    "lint-staged": "10.5.2"
+    "solidity-coverage": "0.7.14"
   },
   "dependencies": {
     "@chainlink/contracts": "0.0.11",
