--- a/package.json
+++ b/package.json
@@ -18,15 +18,17 @@
     "coverage": "npx hardhat coverage --temp artifacts"
   },
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.0",
-    "@nomiclabs/hardhat-waffle": "^2.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@uniswap/v3-core": "1.0.0",
+    "@uniswap/v3-periphery": "1.1.0",
     "dotenv": "^8.2.0",
     "eslint": "7.14.0",
     "eslint-config-prettier": "6.15.0",
     "ethers": "^5.0.19",
-    "hardhat": "^2.0.3",
-    "hardhat-deploy": "^0.7.0-beta.44",
-    "hardhat-deploy-ethers": "^0.3.0-beta.7",
+    "hardhat": "^2.3.3",
+    "hardhat-deploy": "^0.8.6",
+    "hardhat-deploy-ethers": "^0.3.0-beta.10",
     "hardhat-gas-reporter": "^1.0.4",
     "husky": ">=4",
     "lint-staged": "10.5.2",
